contextbar: fix navbar markup
This makes the contextbar markup more consistent with the Bootstrap
documentation at https://getbootstrap.com/docs/3.3/components/#navbar and with
the markup of the main navbar.

This fixes a minor UI issue on small devices where the navbar-collapse border
would show up as a too wide and too low black line.

--- a/kallithea/public/css/contextbar.css
+++ b/kallithea/public/css/contextbar.css
@@ -200,7 +200,7 @@ nav.navbar #quick > li:first-child > a {
 
 nav.navbar #quick > li > a,
 nav.navbar #quick .select2-container .select2-choice .select2-chosen,
-#context-pages > li > a,
+#context-pages > ul > li > a,
 #context-pages .select2-container .select2-choice .select2-chosen,
 x#context-pages .dropdown-menu a {
     padding: 0px 15px 1px 15px;
